Replaces key discovery with well-known feature (#46)
Closes #43
