# rsakey/handler.go
@@ -14,21 +14,37 @@ type Handler struct {
 }
 
 func (h *Handler) SetRoutes(r *httprouter.Router) {
-	r.GET("/keys/id-token.public", h.GetPublicKey)
+	r.GET("/.well-known/jwks.json", h.WellKnown)
 }
 
-func (h *Handler) GetPublicKey(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+// swagger:route GET /.well-known/jwks.json getWellKnown
+//
+// Returns well known keys
+//
+// This endpoint returns public keys for validating the ID tokens issued by ORY Oathkeeper.
+//
+//
+//     Produces:
+//     - application/json
+//
+//     Schemes: http, https
+//
+//     Responses:
+//       200: jsonWebKeySet
+//       401: genericError
+//       403: genericError
+func (h *Handler) WellKnown(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	key, err := h.M.PublicKey()
 	if err != nil {
 		h.H.WriteError(w, r, err)
 		return
 	}
 
-	jwk := &jose.JSONWebKey{
-		Key:       key,
-		KeyID:     "id-token.public",
-		Algorithm: h.M.Algorithm(),
-	}
-
-	h.H.Write(w, r, jwk)
+	h.H.Write(w, r, &jose.JSONWebKeySet{
+		Keys: []jose.JSONWebKey{{
+			Key:       key,
+			KeyID:     h.M.PublicKeyID(),
+			Algorithm: h.M.Algorithm(),
+		}},
+	})
 }
